--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-AWS_REGION=your-aws-region
-S3_BUCKET_NAME=your-s3-bucket-name
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=contactform-nodejsapp
 DB_USERNAME_PARAMETER=/path/to/db-username
 DB_PASSWORD_PARAMETER=/path/to/db-password
 DB_HOST_PARAMETER=/path/to/db-host
