--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "contact-form-nodejs",
   "version": "1.0.0",
-  "description": "A simple contact form application using Node.js, AWS SDK v3, and storing credentials in AWS Parameter Store.",
+  "description": "A simple contact form application using Node.js",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.319.0",
-    "@aws-sdk/client-ssm": "^3.319.0",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.1.4",
-    "ejs": "^3.1.8",
+    "@aws-sdk/client-s3": "^3.345.0",
+    "@aws-sdk/client-ssm": "^3.345.0",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.2" 
   }
 }
