--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_USERNAME_PARAMETER=/contactform/db-username
 DB_PASSWORD_PARAMETER=/contactform/db-password
 DB_HOST_PARAMETER=/contactform/db-host
 DB_NAME_PARAMETER=/contactform/db-name
+PORT=3000 
