environment variable updated

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-AWS_REGION=us-east-1
-S3_BUCKET_NAME=contactform-nodejsapp
+AWS_REGION=eu-west-1
+S3_BUCKET_NAME=myappcontactform-bucket
 PARAMETER_STORE_DB_USER=/contactform/db-username
 PARAMETER_STORE_DB_PASS=/contactform/db-password
 PARAMETER_STORE_DB_HOST=/contactform/db-host
 PARAMETER_STORE_DB_NAME=/contactform/db-name
-PORT=3000 
+PORT=3000
